[views] split fixed-size fans from stretchy/flexible ones, and move sizing from CSS to JS

--- a/code/normal.css
+++ b/code/normal.css
@@ -13,11 +13,6 @@ halfpilespacer {
   width: 71px;
   height: 96px;
 }
-.hfan2 > canvas {
-  width: 83px; /* gCardWidth + gHFanOffset */
-}
-.foundation4 > canvas { height: 162px; } /* gCardHeight + 3 * gVFanOffset */
-.foundation8 > canvas { height: 250px; } /* gCardHeight + 7 * gVFanOffset */
 
 .slide {
   min-width: 81px;
@@ -26,10 +21,6 @@ halfpilespacer {
 
 .draw3h-waste {
   min-width: 142px;
-}
-
-.pileon {
-  min-width: 107px; /* 71px + 3 * gHFanOffset */
 }
 
 .pyramid > * { margin-bottom: -60px; }
